--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Pig Game</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://img.favpng.com/13/18/25/computer-icons-png-favpng-BT2JMtNTSSy8LjWnURWxyeks0.jpg"
+    />
+    <title>Alen Dice Game</title>
   </head>
   <body>
     <div class="modal hidden">
