--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="icon"
-      type="image/png"
+      type="png"
       href="https://img.favpng.com/13/18/25/computer-icons-png-favpng-BT2JMtNTSSy8LjWnURWxyeks0.jpg"
     />
     <title>Alen Dice Game</title>
