--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="jpg" href="dice-icon1.png" />
-    <title>Pig Game</title>
+    <title>Alen Dice Game</title>
   </head>
   <body>
     <div class="modal hidden">
