--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="jpg" href="dice-icon1.png" />
-    <title>Alen Dice Game</title>
+    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="icon" type="jpg" href="./public/images/dice-icon1.png" />
+    <title>Deuces</title>
   </head>
   <body>
     <div class="modal hidden">
@@ -32,11 +32,11 @@
         </div>
       </section>
 
-      <img src="dice-5.png" alt="Playing dice" class="dice" />
+      <img src="./public/images/dice-5.png" alt="Playing dice" class="dice" />
       <button class="btn btn--new">🔄 New game</button>
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
     </main>
-    <script src="script.js"></script>
+    <script src="./src/script.js"></script>
   </body>
 </html>
